[package]
name = "demo_isa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "demo_isa"
[dependencies]
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0.196", features = ["derive"] }
enumflags2 = "0.7.9"
